--- a/.github/workflows/pr-quality-gate.yml
+++ b/.github/workflows/pr-quality-gate.yml
@@ -134,7 +134,7 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: npm run lint -- --max-warnings=0
+        run: npm run lint
 
   # 🐍 Backend Linting (parallel)
   lint-backend:
