--- a/.github/workflows/pr-quality-gate.yml
+++ b/.github/workflows/pr-quality-gate.yml
@@ -97,7 +97,7 @@ jobs:
             
             - 🔍 **Linting**: Checking code formatting and style
             - ✨ **Quality**: Running comprehensive code analysis
-            - 🛡️ **Security**: Deep vulnerability scanning with CodeQL
+            - 🛡️ **Security**: Deep vulnerability scanning with Safety Action + CodeQL
             - 🐳 **Build Test**: Verifying Docker containers build successfully
             
             *Like any good LEGO instruction manual, we'll verify each step before moving to the next! 📋*`;
@@ -236,6 +236,25 @@ jobs:
           cd backend
           python -m pytest --cov=. --cov-report=xml || echo "No tests found, skipping"
 
+  # 🛡️ Safety Action Security Check (parallel)
+  safety-security-check:
+    name: 🛡️ Deep LEGO Security Scan (Safety Action)
+    runs-on: ubuntu-latest
+    needs: discover-changes
+    if: needs.discover-changes.outputs.backend-changed == 'true'
+    
+    steps:
+      - name: 📎 Get LEGO Security Instructions
+        uses: actions/checkout@v4
+      
+      - name: 🛡️ Run Safety CLI to check for vulnerabilities
+        uses: pyupio/safety-action@v1
+        with:
+          api-key: ${{ secrets.SAFETY_API_KEY }}
+          
+      - name: 🎯 Safety scan completed
+        run: echo "🧱 Safety Action security scan completed successfully!"
+
   # 🛡️ Deep Security Analysis (parallel)
   security-analysis:
     name: 🛡️ Deep LEGO Security Scan (CodeQL)
@@ -280,7 +299,7 @@ jobs:
   build-test:
     name: 🐳 LEGO Assembly Test (Docker Build)
     runs-on: ubuntu-latest
-    needs: [discover-changes, lint-frontend, lint-backend, quality-frontend, quality-backend, security-analysis]
+    needs: [discover-changes, lint-frontend, lint-backend, quality-frontend, quality-backend, safety-security-check, security-analysis]
     # Run if any component changed and all checks passed (or were skipped due to no changes)
     if: always() && !contains(needs.*.result, 'failure')
 
@@ -314,7 +333,7 @@ jobs:
   quality-gate-summary:
     name: 📊 LEGO Quality Gate Summary
     runs-on: ubuntu-latest
-    needs: [discover-changes, lint-frontend, lint-backend, quality-frontend, quality-backend, security-analysis, build-test]
+    needs: [discover-changes, lint-frontend, lint-backend, quality-frontend, quality-backend, safety-security-check, security-analysis, build-test]
     if: always()
 
     steps:
@@ -338,7 +357,8 @@ jobs:
                 'lint-backend': '🐍 Backend Linting', 
                 'quality-frontend': '✨ Frontend Quality',
                 'quality-backend': '✨ Backend Quality',
-                'security-analysis': '🛡️ Security Analysis',
+                'safety-security-check': '🛡️ Safety Security Scan',
+                'security-analysis': '🛡️ CodeQL Security Analysis',
                 'build-test': '🐳 Docker Build'
               };
               
