--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 # file: backend/requirements.txt
 
 # FastAPI and ASGI server
-fastapi==0.119.0
-uvicorn[standard]==0.37.0
+fastapi==0.121.0
+uvicorn[standard]==0.38.0
 python-multipart==0.0.20
-starlette==0.48.0  # Explicit version to fix CVE-2024-47874 and CVE-2025-54121
+starlette==0.49.1  # Updated to fix CVE-2025-62727 DoS vulnerabilities - compatible with FastAPI 0.121.0
 
 # Database
 sqlalchemy==2.0.44
@@ -16,7 +16,7 @@ requests==2.32.5
 apscheduler==3.11.0
 
 # System monitoring
-psutil==7.1.0
+psutil==7.1.3
 
 # Legacy Flask dependencies (to be removed after migration)
 flask==3.1.2
