--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,3 +22,7 @@ psutil==7.1.3
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.5.0
 slowapi==0.1.9
+
+# Security: Pin transitive dependencies to fix CVE vulnerabilities
+urllib3>=2.6.2  # CVE-2025-66471, CVE-2025-66418
+authlib>=1.6.6  # CVE-2025-62706, CVE-2025-61920 (if installed by transitive deps)
