--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,7 +20,7 @@ psutil==7.1.3
 
 # Authentication and security
 passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.5.0
+PyJWT[crypto]==2.10.1  # Replaced python-jose to avoid ecdsa vulnerabilities (CVE-2024-64396, CVE-2024-64459)
 slowapi==0.1.9
 
 # Security: Pin transitive dependencies to fix CVE vulnerabilities
