security: fix 3 critical vulnerabilities (issues #253, #254, #255)
This commit addresses three critical security vulnerabilities discovered
during the security assessment:

1. Issue #255: Remove API key exposure in frontend
   - Removed LOCAL_API_KEY from frontend/entrypoint.sh
   - API keys must never be exposed to client-side JavaScript
   - Frontend should only use JWT tokens for authentication

2. Issue #253: Remove default JWT secret key
   - Removed hardcoded default "default-secret-key-change-in-production"
   - Added validation to require explicit AUTH_SECRET_KEY when auth enabled
   - Application now fails at startup with clear error if key not set
   - Prevents token forgery attacks

3. Issue #254: Fix wildcard CORS configuration
   - Replaced allow_origins=["*"] with environment-configured origins
   - Added ALLOWED_ORIGINS env var (comma-separated list)
   - Restricted allowed methods and headers to necessary ones only
   - Prevents cross-origin attacks and token theft

Additional changes:
- Updated config/.env.template with ALLOWED_ORIGINS documentation
- Added security comments and warnings in code
- Added startup logging for CORS configuration

Security Impact:
- CRITICAL: Prevents complete authentication bypass
- CRITICAL: Prevents API key theft by website visitors
- CRITICAL: Prevents cross-origin attacks from malicious websites

Breaking Changes:
- AUTH_SECRET_KEY now required when AUTH_ENABLED=true
- ALLOWED_ORIGINS must be configured for production (has dev defaults)
- Frontend config.js no longer contains LOCAL_API_KEY

Migration Guide:
1. Set AUTH_SECRET_KEY if using authentication:
   export AUTH_SECRET_KEY=$(openssl rand -hex 32)
2. Configure ALLOWED_ORIGINS for production:
   export ALLOWED_ORIGINS=https://yourdomain.com
3. Rotate LOCAL_API_KEY (it was previously exposed in frontend)

Resolves: #253, #254, #255

--- a/config/.env.template
+++ b/config/.env.template
@@ -73,6 +73,21 @@ AUTH_SECRET_KEY=your-secret-key-min-32-chars-change-in-production
 AUTH_SESSION_TIMEOUT=60
 
 # =============================================================================
+# CORS (Cross-Origin Resource Sharing) CONFIGURATION
+# =============================================================================
+# Comma-separated list of allowed origins that can access the API
+# SECURITY: This is critical for preventing cross-origin attacks
+#
+# Development (default if not set):
+# ALLOWED_ORIGINS=http://localhost:5002,http://localhost:5173,http://localhost:3000
+#
+# Production example (use your actual domain):
+# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+#
+# NEVER use "*" (wildcard) in production - this allows ANY website to access your API
+ALLOWED_ORIGINS=http://localhost:5002,http://localhost:5173
+
+# =============================================================================
 # LOGGING CONFIGURATION
 # =============================================================================
 # Logging level - controls verbosity of application logs
