--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -11,10 +11,16 @@ RUN groupadd -r appuser && useradd -r -g appuser appuser
 COPY ./backend /app
 COPY ./backend/requirements.txt /app/requirements.txt
 
+# Upgrade pip to latest secure version (25.3 has known vulnerabilities)
+RUN pip install --no-cache-dir --upgrade pip==26.0.1
+
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Install curl for healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Remove tar binary to mitigate CVE-2025-45582 (not needed at runtime)
+RUN rm -f /usr/bin/tar /bin/tar
 
 # Set ownership to non-root user
 RUN chown -R appuser:appuser /app
